--- a/4-distributed-systems/410-vr.md
+++ b/4-distributed-systems/410-vr.md
@@ -34,7 +34,7 @@ Replica group of size **$2f+1$**
 
 ### Approach 
 * Primary: decide order for client requests
-    *  also execute and return results to cleint after $f+1$ (self-includedd) replicas know about the request
+    * Execute and return results to client after $f+1$ (self-includedd) replicas know about the request
 * Client: 
     * **Only communicates with the primary.**
     * monitor primary failures, initiate _view_ change if needed
@@ -53,7 +53,7 @@ _Reasoning_:
 3. Non-primary replicas process $PREPARE$ message in order. It will check its `view-num` to see if it itself is up-to-date, or the other replica is not up-to-date. It will wait until it has all eariler requests in its _log_ (otherwise enter recovery state). 
    1. If everything is fine, it will increment its `op-num`, appends the operation to the `op-log`, and update the client table.
    2. Send `<PREPARE-OK, view-num, op-num, replica-identity>` to primary
-   3. Since there is no gap, sending a PREPARE-OK means all previous operatoins have been prepared. 
+   3. Since there is no gap, sending a PREPARE-OK means all previous operations have been prepared. 
 4. Primary waits for $f+1$ (including itself) PREPARE_OK message from different replicas, at which point it knows that a **quorum** of nodes know about the operation, it's considered as committed. 
    1. Performs the client operation.
    2. Primary increment its `commit-num`.
@@ -62,21 +62,21 @@ _Reasoning_:
 5. Primary inform other replicas about commit either through piggy-backed information or send directly, secondary then commits in order. 
    1. E.g. piggypack on the next PREPARE message. 
    2. Alternatively, a `<COMMIT, view-num, commit-num>`. 
-   3. In either case, a replica will execute all operation in their op-log between the last `commit-num` and the `commit-num` in the `<COMMIT>` message strictly following the order of operations and advance its commit-num as well.
+   3. In either case, a replica will execute all operation in their op-log between the last `commit-num` and the `commit-num` in the `<COMMIT>` message strictly following the order of operations and advance its `commit-num` as well.
 6. Heartbeat:
    1. `<PREPARE>` and `<COMMIT>` act as heartbeat for the primary. 
 
 ### #2: View Change Protocol 
 * The view change protocol is used when **one of the replicas** detects that the current primary is unavailable and it proceeds to inform the rest of the ensemble. 
-  * Detected as there is no heartbeat -> timeout. 
-* Uses a sorted list of IPs to determine who is the next primary node, in a *round-robin* fashion.
+  * Detected as there is no heartbeat -> triggers timeout. 
+* Uses a sorted list of `IPs` to determine who is the next primary node, in a *round-robin* fashion.
 * In each **view** one of the replicas is selected to be the primary
 * View change protocol must obtain information from logs of at least $f+1$ replica
     * Ensure all **committed** operations will be known (i.e. recorded in at least one of these logs)
 * **Viewstamps: < _view-number_, _op-number_>** 
     *  ensure operations that are "preparing" but not committed will not get lost
     *  i.e. a new leader may assign a previous used op-number to different operation, causing inconsistency
-*  Once a node advances _view-number_ it no longer accepts messages from old view, instead it informs senders about new view 
+*  Once a node advances `view-number` it no longer accepts messages from old view, instead it informs senders about **new view**
  
 Steps:
 1. Replica $i$ suspects primary is faulty, advances its _view-number_, set its status to _view-change_, and send `<START-VIEW-CHANGE, view-number, idenity >` to the new **primary**
@@ -92,6 +92,7 @@ Steps:
 4. Other replicas receiving `STARTVIEW` will
    *  **replace their log with the new log**, set their `op-number`, `view-num`, and change their status to `normal`.
    *  send $PREPAREOK$ messages for uncommitted ops 
+   *  Some similarity with Raft. 
 
 ### #3: Recovery Protocol 
 1. Replica $i$ sends a `<GET_STATE, view-num, op-num, commit-num, identity>` nessage to any of other replicas. 
@@ -110,5 +111,3 @@ Steps:
    2. Solution is to use lease. 
 3. If the clients can accept stale reads, then read-only requests can be made directly to the follower replicas.
    1. For example the client is connecting to the primary and ask for a write operation such as a registry increment (write a = a + 1), the primary will process the request as usual, but along with the response it will communicate the operation number (op-num) for this request. The client records the op-num and it uses to make subsequent requests to the follower replicas for a read-only request. The replica, if it hasn’t processed the operation in the client request op-num it will have to wait until it the primary communicate that it is safe to do so and then reply.
-
-LImitation: ensemble reconfiguration. 
