storage systems revisited

--- a/3-storage-systems/31-io.md
+++ b/3-storage-systems/31-io.md
@@ -2,20 +2,20 @@
 
 ## Buses, Controllers
 
-
 General architecture:
 - ![alt text](images/31-io/system-architecture.png)
 - Single CPU attached to main memory with **memory bus** or interconnect
 - Some devices are connected to the system via a general **I/O bus** (e.g. PCI)
+  - PCIe is much faster than PCI. PCI bus uses parallel bus architecture (data is transmitted simultaneously across multiple channels). PCIe uses a serial bus architecture, with data transmitted through point-to-point connections. The number of lanes (x1, x4, x8, x16, etc.) determines the total bandwidth.
+  - PCI is outdated. 
 - **Peripheral bus** (e.g. USB, SCSI, SATA) connects **slow devices** to the system, including disks, mice, and keyboards
   
 ## Why this hierarchy? 
 
-- Physics, and cost
 - The faster the bus is, the shorter it must be
     - High-performance memory bus does not have much room to plug devices into it
 - Components demand high performance (e.g. graphic card) are nearer the CPU
-- Low performance components are further away
+- Low performance components are further away (e.g. keyboard, mouse)
 - CPU connects to an I/O chip via Intel’s proprietary DMI (Direct Media Interface)
 - Rest of the devices connect to this chip via different interconnect
     - Hard drive: via eSATA interface
@@ -39,6 +39,8 @@ General architecture:
 3. Writing a command to command register, let the device know that data is present and it should begin working
 4. Waiting until the device to finish by polling it from a loop 
 
+Used in legacy systems or embedded systems. 
+
 ## Interrupts v.s. Polling
 
 - Polling
@@ -53,13 +55,13 @@ General architecture:
     - If device finishes quickly or in networks where there is huge stream of incoming packets
         - then interrupt overhead (context switching) is expensive, OS can even livelock, better to poll
     - Better to use a hybrid approach if speed of device unknown: polls for a while then interrupt. 
-    -  Using an interrupt in this case will actually slow down the system: switching to another process, handling the interrupt, and switching back to the issuing process is expensive. Thus, if a device is fast, it may be best to poll; if it is slow, interrupts, which allow
+    -  Using an interrupt in this case will actually slow down the system: switching to another process, handling the interrupt, and switching back to the issuing process is expensive. Thus, **if a device is fast, it may be best to poll; if it is slow, interrupts, which allow**
     -  When a huge stream of incoming packets each generate an interrupt, it is possible for the OS to livelock, that is, find itself only processing interrupts and never allowing a user-level process to run and actually service the requests.
 
 - **Coalescing**
     - A device which needs to raise an interrupt first waits before delivering interrupt to CPU
     - While waiting, other requests may soon complete
-    - Multiple interrupts can be coalesced into a single interrupt delivery
+    - Multiple interrupts can be **coalesced** into a single interrupt delivery
   
 ## PIO v.s. DMA
 
@@ -74,7 +76,7 @@ General architecture:
 
 
 1. **Explicit I/O instructions** 
-    1. Each device has a port
+    1. Each device has a **port**
     2. E.x. X86, `in` and `out` instructions can be used to communicate with devices
         1. These are distinct instructions separate from regular load and store instructions that access memory 
         2. For example, to send data to a device, the caller specifies a register with the data in it, and a specific **port** which names the device. Executing the instruction leads to the desired behavior.
