--- a/3-storage-systems/311-afs.md
+++ b/3-storage-systems/311-afs.md
@@ -10,7 +10,7 @@ Read: July 12th, 2024
 
 - How does it differ from NFS?
     - NFS is limited in scalability
-        - E.x. frequent check if cache contents change
+        - E.x. frequent check if cache contents change (basically polling)
     - NFS cache consistency is hard to describe: depends on low-level implementation details
         - E.x. **client-side cache timeout intervals**
     - In AFS: when the file is opened, a client will generally receive the latest consistent copy from the server.
@@ -21,6 +21,7 @@ Read: July 12th, 2024
 - Details
     - Upon `open()` call
         - Client sends a *Fetch* protocol message to server with entire pathname (e.x. `/home/remzi/notes.txt`)
+          - Different from NFS, which asks for a file handle for each part of the file name. 
         - Server traverses the pathname, finds the desired file, and **ships the file** back to client
         - Client caches the file on local disk
             - Consecutive R/W: also uses local memory to cache blocks on its local disk
@@ -47,7 +48,7 @@ There are two main problems with AFSv1:
     1. Just like NFS problem 
 3. Additional problem 
     1. **Load imbalance** across servers 
-        1. Sol: volumes —> an administrator can move across servers to balance load 
+        1. Sol: volumes (or FS) —> an administrator can move across servers to balance load 
     2. Server used a single distinct process per **client** thus inducing **context switching** and other overheads 
         1. Sol: building the server with threads instead of processes
 
@@ -58,7 +59,7 @@ There are two main problems with AFSv1:
 ### #1: Callback
 
 - AFSv2 introduce **callback** to reduce # of client / server interactions, adding this **state** to the system
-- Client assumes that the file is valid until server tells it
+- Client assumes that the file is valid until server tells it (Invalidation)
 - Analogy to: **pulling v.s interrupts**
 
 ### #2: FID
@@ -72,43 +73,23 @@ There are two main problems with AFSv1:
     - Client walk the pathname, caching the results
     - Example
 - Key difference from NFS
-    - With each fetch, AFS client would establish a callback with the server
-    - Benefit: second access as fast as accessing the file locally (no server interaction)
-  
+    - **With each fetch**, AFS client would establish a callback with the server
+    - Benefit: second access as fast as accessing the file locally (no server interaction). Basically whole file caching. 
+
+**Name resolution**: move the name resolution from server to client, client walks and maps the pathname to Fid (i.e. <vol identifier, file identifier, uniquifier>). 
+
 - For example, if a client accessed the file /home/remzi/notes.txt, and home was the AFS directory mounted onto / (i.e., / was the local root directory, but home and its children were in AFS), the client would first Fetch the directory contents of home, put them in the local-disk cache, and set up a callback on home. Then, the client would Fetch the directory thus ensuring that the server would notify the client of a change in its cached state. 
 
 ### LWP
 
 * User-level mechanism to support multiple nonpreemptive Lightweight Processes (LWPs) 
 * An LWP is bound to a particular client only for the duration of a single server operation. A client thus has long-term state on a server but not a corresponding thread of control associated with it. 
-
-## Motivation: scale 
-Key problems of original AFS prototype via extensive benchmarking: 
-1. **Path-traversal** costs are too high
-    1. *Fetch* / *Store* request: pass entire pathname 
-    2. CPU time simply walking down directory paths when there’re too many clients 
-2. The client issues **too many TestAuth** protocol messages 
-    1. Cache validation (similar to NFS) 
-3. Excessive **context switching** overhead and high virtual memory paging demands 
-4. Server **imbalance**
+  * This is different from the NFS stateless design. 
 
 ## Techniques
 
-### Scale 
-**Cache mgmt (callback interface)**: rather than checking with server on each open, AFS client instead cache entries of directories and symbolic links, and assume the cache entries are valid unless notified (_callback_). This reduce the cache invalidation traffic and reduce loads on server. 
-* Stateful: server keeps track of states, which make crash recovery harder!
-  
-**Name resolution**: move the name resolution from server to client, client walks and maps the pathname to Fid (i.e. <vol #, vnode #, uniquifier>). 
-
-**Server process**: a server process per client did not scale well; instead use a single process to service all clients, use threads instead of processes. 
-
 ### Usability 
 Storage representation: instead of pathname, access files by their inode. 
-
-AFS usability changes: 
-* true global namespace to clients and ensure all files were named the same way on all client machines (v.s. NFS)
-* considers security and incorporates mechanisms to authenticate users as well as providing user-managed access control
-* simpler management of servers. 
 
 ## Crash recovery 
 Crash recovery is more involved than NFS with the callback mechanism (e.x. may miss callback recall messages during crash). When client recovers, it needs to check with server again. 
@@ -125,8 +106,6 @@ Server recovery is also harder, **as callbacks are kept in memory. Methods to de
 * NFS can fetch or update only the necessary portions of a file, making it more efficient for workloads involving random or partial file access.
 * Also overwriting existing files is better in NFS, as it avoids the initial read operation that AFS requires to fetch the whole file before overwriting.
 
-
-
 ### Cache Consistency 
 
 Two important cases:
@@ -139,15 +118,6 @@ Two important cases:
 2. Consistency between processes on the *same* machine 
     1. Write immediately visible to other local processes (i.e. not wait until file closed) 
     2. Based upon typical UNIX semantics
-
-### Crash Recovery 
-
-- More involved with NFS, where clients hardly noticed a server crash
-- Scenario: S cannot contact some C1 for a while, but send the callback messages
-- Scenario: S crashes, and callbacks are kept in memory
-- Some approach
-    - Server send a message (hey server, is my file still latest) when it is up and running again
-    - Clients check server is alive periodically (via heartbeat)
 
 ## Other Improvements on AFS
 
@@ -168,4 +138,4 @@ access the file from there when the file is accessed again. NFS, in contrast, on
 * A Volume is a collection of files forming a partial subtree of the Vice name space.
 * Quotas are implemented in this system on a per volume basis. Each user of the system is assigned a volume, and each volume is assigned a quota. 
 * Volumes form the basis of the backup and restoration mechanism in our redesign. To backup a volume, a read-only clone is first made, thus creating a frozen snapshot of those files. 
-* Volumes provide a level of Operational Transparency that is not sup- ported by any other file system we are aware of. From an operational standpoint, the system is a flat space of named volumes. The file system hierarchy is constructed out of volumes but is orthogonal to it.
+* 
