Review on Wednesday

--- a/3-storage-systems/311-afs.md
+++ b/3-storage-systems/311-afs.md
@@ -43,7 +43,7 @@ There are two main problems with AFSv1:
 1. **Path-traversal costs are too high**
     1. *Fetch* / *Store* request: pass entire pathname 
     2. **CPU time simply walking down directory paths when there’re too many clients**
-    3. Server spends too much time traversing pathnames
+    3. **Server spends too much time traversing pathnames**
 2. **The client issues too many TestAuth protocol messages** 
     1. Just like NFS problem 
 3. Additional problem 
@@ -73,10 +73,10 @@ There are two main problems with AFSv1:
     - Client walk the pathname, caching the results
     - Example
 - Key difference from NFS
-    - **With each fetch**, AFS client would establish a callback with the server
-    - Benefit: second access as fast as accessing the file locally (no server interaction). Basically whole file caching. 
+    - **With each fetch**, **AFS client would establish a callback with the server**
+    - Benefit: second access as fast as accessing the file locally (no server interaction). **Basically whole file caching**. 
 
-**Name resolution**: move the name resolution from server to client, client walks and maps the pathname to Fid (i.e. <vol identifier, file identifier, uniquifier>). 
+**Name resolution**: move the name resolution from server to client, client walks and maps the **pathname to Fid** (i.e. <vol identifier, file identifier, uniquifier>). 
 
 - For example, if a client accessed the file /home/remzi/notes.txt, and home was the AFS directory mounted onto / (i.e., / was the local root directory, but home and its children were in AFS), the client would first Fetch the directory contents of home, put them in the local-disk cache, and set up a callback on home. Then, the client would Fetch the directory thus ensuring that the server would notify the client of a change in its cached state. 
 
@@ -129,8 +129,7 @@ Two important cases:
     - V.s. NFS: much less support for this type of sharing
 - Tools to enable simpler management of servers for system admins
 - Sadly, NFS dominates the market place and becomes an open standard. NFSv4 now also adds server state (e.g. an “open” protocol message).
-- Because AFS has a large local disk cache, it will
-access the file from there when the file is accessed again. NFS, in contrast, only can cache blocks in client memory; as a result, if a large file (i.e., a file bigger than local memory) is re-read, the NFS client will have to re-fetch the entire file from the remote server
+- Because AFS has a large local disk cache, it will access the file from there when the file is accessed again. NFS, in contrast, only can cache blocks in client memory; as a result, if a large file (i.e., a file bigger than local memory) is re-read, the NFS client will have to re-fetch the entire file from the remote server
 - NFS: flush on close consistency.
 
 ### Volume
@@ -138,4 +137,3 @@ access the file from there when the file is accessed again. NFS, in contrast, on
 * A Volume is a collection of files forming a partial subtree of the Vice name space.
 * Quotas are implemented in this system on a per volume basis. Each user of the system is assigned a volume, and each volume is assigned a quota. 
 * Volumes form the basis of the backup and restoration mechanism in our redesign. To backup a volume, a read-only clone is first made, thus creating a frozen snapshot of those files. 
-* 
