--- a/4-distributed-systems/410-vr.md
+++ b/4-distributed-systems/410-vr.md
@@ -50,17 +50,17 @@ _Reasoning_:
 
 1. Client sends `<REQUEST, client-id, request #, op>` to primary
 2. Primary advances op-num (with the new op) and adds request to end of the _log_, then it sends `<PREPARE, view-num, op-num, commit-num, message (client request itself)>` to other replicas
-3. Non-primary replicas process $PREPARE$ message in order. It will check its `view-num` to see if it itself is up-to-date, or the other replica is not up-to-date. It will wait until it has all eariler requests in its _log_ (otherwise enter recovery state). 
+3. Non-primary replicas process `PREPARE` message in order. It will check its `view-num` to see if it itself is up-to-date, or the other replica is not up-to-date. It will wait until it has all eariler requests in its _log_ (otherwise enter recovery state). 
    1. If everything is fine, it will increment its `op-num`, appends the operation to the `op-log`, and update the client table.
    2. Send `<PREPARE-OK, view-num, op-num, replica-identity>` to primary
-   3. Since there is no gap, sending a PREPARE-OK means all previous operations have been prepared. 
+   3. Since there is no gap, sending a `PREPARE-OK` means all previous operations have been prepared. 
 4. Primary waits for $f+1$ (including itself) PREPARE_OK message from different replicas, at which point it knows that a **quorum** of nodes know about the operation, it's considered as committed. 
    1. Performs the client operation.
    2. Primary increment its `commit-num`.
    3. Update the client table with the operation results.
-   4. Primary executes this request until all previous requests are executed and send `<REPLY, view-num, request-num, response>` to the client
+   4. **Primary executes this request until all previous requests are executed** and send `<REPLY, view-num, request-num, response>` to the client
 5. Primary inform other replicas about commit either through piggy-backed information or send directly, secondary then commits in order. 
-   1. E.g. piggypack on the next PREPARE message. 
+   1. E.g. piggypack on the next `PREPARE` message. 
    2. Alternatively, a `<COMMIT, view-num, commit-num>`. 
    3. In either case, a replica will execute all operation in their op-log between the last `commit-num` and the `commit-num` in the `<COMMIT>` message strictly following the order of operations and advance its `commit-num` as well.
 6. Heartbeat:
@@ -81,7 +81,7 @@ _Reasoning_:
 Steps:
 1. Replica $i$ suspects primary is faulty, advances its _view-number_, set its status to _view-change_, and send `<START-VIEW-CHANGE, view-number, idenity >` to the new **primary**
    *  Not accept any `PREPARE` message from old primary
-2. When the other replicas receive a `<START-VIEW-CHANGE>` message with a `view-num` bigger than the one they have, they set their status to `view-change` and set the `view-num` to the view number in the message and reply with `<START-VIEW-CHANGE>` to all replicas. 
+2. When the other replicas receive a `<START-VIEW-CHANGE>` message with a `view-num` bigger than the one they have, they set their status to `view-change` and set the `view-num` to the view number in the message and reply with `<START-VIEW-CHANGE>` to **all replicas**. 
 2. When new primary receives $f+1$ messages
    *  Set new log = the _most recent_ of those messages (i.e. with the largest viewstamp), and the largest log. 
    *  Set `op-number` to latest entry in new _log_
@@ -107,7 +107,7 @@ Steps:
 1. Sending log content can be inefficient. 
    1. Storing the internal replica state into a durable storage can speed up the recovery in the event the process is crashed or restarted.
 2. Primary and client can be cut in the same partition, whereas other replicas have moved on to the new views. 
-   1. The "old primary" can serve stale data.
+   1. **The "old primary" can serve stale data.**
    2. Solution is to use lease. 
 3. If the clients can accept stale reads, then read-only requests can be made directly to the follower replicas.
    1. For example the client is connecting to the primary and ask for a write operation such as a registry increment (write a = a + 1), the primary will process the request as usual, but along with the response it will communicate the operation number (op-num) for this request. The client records the op-num and it uses to make subsequent requests to the follower replicas for a read-only request. The replica, if it hasn’t processed the operation in the client request op-num it will have to wait until it the primary communicate that it is safe to do so and then reply.
