--- a/4-distributed-systems/415-ray.md
+++ b/4-distributed-systems/415-ray.md
@@ -3,10 +3,11 @@
 Link: https://arxiv.org/pdf/1712.05889
 Read: August 2nd, 2024
 
-
+* Ray: expresses both task-paralllel and actor-based computations
+* Lineage based fault tolerance for actors, replication-based fault tolerance for metadata store. 
 * RL: RL deals with learning to operate continuously within an uncertain environment based on delayed and limited feedback 
-  * Both requires distributed training
-  * and to serve the policy in interactive close-loop and open-loop control scenarios.
+  * Both requires **distributed training**
+  * and to serve the policy in **interactive** close-loop and open-loop control scenarios.
 * Systems requirements:
   * Support fine-grained computations (e.g. rendering actions in milliseconds)
   * Support heterogeneity in time (e.g. a simulation can be seconds or hours) and space (GPU and CPU)
