--- a/3-storage-systems/311-afs.md
+++ b/3-storage-systems/311-afs.md
@@ -21,7 +21,8 @@ Read: July 12th, 2024
 - Details
     - Upon `open()` call
         - Client sends a *Fetch* protocol message to server with entire pathname (e.x. `/home/remzi/notes.txt`)
-          - Different from NFS, which asks for a file handle for each part of the file name. 
+          - **Different from NFS, which asks for a file handle for each part of the file name.**
+            - NFS will have a file handle for `/home`, then another for `remzi`, and another for `notes.txt`, and so on.
         - Server traverses the pathname, finds the desired file, and **ships the file** back to client
         - Client caches the file on local disk
             - Consecutive R/W: also uses local memory to cache blocks on its local disk
